# synthetic-data-gen

./: .gitignore  Makefile  how_to_use.md  pyproject.toml
src/datagen_core/: __init__.py  generators.py
src/datagen_extractor/: __init__.py  cli_bridge.py  codegen.py  extractor.py  fidelity.py  graph.py  harness.py  main.py  pii.py  pipeline.py  schema.py  validate.py
tests/: test_extractor.py  test_fidelity.py  test_generators.py  test_graph.py  test_harness.py  test_output_formats.py  test_pii.py  test_pipeline_e2e.py  test_rules_null_rate.py  test_schema_backcompat.py  test_text_profile.py
