[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagen-extractor"
version = "0.1.0"
description = "Extract field-level schema from Confluence data contracts into validated YAML"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.10.6,<7.13"
    "ruff>=0.4,<0.15",
    "pyarrow>=15.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[project.scripts]
datagen-extractor = "datagen_extractor.main:app"

[tool.setuptools.packages.find]
where = ["src"]
